fixes footer spacing responsiveness - still not perfect

--- a/public/css/confirmation.css
+++ b/public/css/confirmation.css
@@ -210,12 +210,14 @@ input {
   .footer h1 {
     margin-top: 2%; 
   }
+}
 
+@media (max-width: 600px) {
   .footer li img {
-    margin-top: 5%;
+    margin-top: 15%;
   }
-  
+
   #privacy-policy-link li {
-    padding-top: 3%;
+    padding: 5% 9% 0 0;
   }
 }
